DSE code cleanup based on Sonar warnings